--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 										</div>
 									</div>
 								</div>
-								<img data-src="images/resume/slider/dt2.jpg" data-retina src="images/blank.png" alt=""/>
+								<img data-src="images/resume/slider/dt.jpg" data-retina src="images/blank.png" alt=""/>
 							</li>
 						</ul>
 					</div>
