--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
 			<!-- Header End -->
             
 				<!-- Fullscreen Slider Section -->
+				<div class="content clearfix">
+
+				<!-- Fullscreen Slider Section -->
 				<section class="section-block featured-media window-height tm-slider-parallax-container">
 					<div class="tm-slider-container full-width-slider" data-featured-slider data-parallax>
 						<ul class="tms-slides">
@@ -223,9 +226,6 @@
 														Dave Thomson<br><span class="opacity-05">Australian Model</span>
 													</h1>
 													<div class="clear"></div>
-													<ul class="tms-caption social-list list-horizontal no-margin-left mb-40"
-														data-animate-in="preset:slideInUpShort;duration:1000ms;delay:400ms;">
-													</ul>
 													<div class="clear"></div>
 														<a href="#about" class="tms-caption color-white scroll-link icon-down-open-mini large hide-on-mobile" data-offset="-60" 
 														data-animate-in="preset:slideInDownShort;duration:1000ms;delay:1000ms;"
