--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 														A. Care Management
 													</h1>
 													<p class="lead color-white text-uppercase no-margin-bottom">
-														Ottawa's leading AirBnb Service Providers
+														Ottawa &amp; Montreal's leading AirBnb Service Providers
                                             
 												</p>
 												</div>
